tests/ui/fail-unknown-attr.stderr
error: unknown name
 --> $DIR/fail-unknown-attr.rs:1:25
  |
1 | #[lazylink::lazylink(aaa="bbb")]
  |                         ^
